--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,8 @@
 sonar.projectKey=Guhan1943_clac-python
 sonar.organization=guhan1943
+sonar.sources=src
+sonar.language=py
+sonar.sourceEncoding=UTF-8
 
 
 # This is the name and version displayed in the SonarCloud UI.
@@ -8,7 +11,5 @@ sonar.organization=guhan1943
 
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
 
 # Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
