--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
 
       # 8. Run OWASP ZAP baseline scan
       - run: |
-          docker run --rm owasp/zap2docker-stable zap-baseline.py \
+          docker run --rm owasp/zap2docker-weekly zap-baseline.py \
           -t http://localhost:8000 \
           -r zap-report.html
 
