--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,8 +31,16 @@ jobs:
       # 5. Run pytest with coverage
       - run: pytest --cov=src --cov-branch --cov-report=xml
 
-      # 6. Build Docker image
+      # Login to Docker Hub
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      # Build Docker image
       - run: docker build -t fastapi-calculator .
+
 
       # 7. Run Docker container
       - run: |
