--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,9 +49,12 @@ jobs:
 
       # 8. Run OWASP ZAP baseline scan
       - run: |
-          docker run --rm owasp/zap2docker-weekly zap-baseline.py \
-          -t http://localhost:8000 \
-          -r zap-report.html
+          docker run --rm \
+            -v $(pwd):/zap/wrk \
+            ghcr.io/zaproxy/zaproxy:stable \
+            /zap/zap-baseline.py \
+            -t http://localhost:8000 \
+            -r zap-report.html
 
       # 9. Upload ZAP report
       - uses: actions/upload-artifact@v4
