--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,14 +51,16 @@ jobs:
       - run: |
           mkdir zap-output
           docker run --rm --network zapnet \
-            -v $(pwd)/zap-output:/zap/reports \
-            ghcr.io/zaproxy/zaproxy:stable \
-            /zap/zap-baseline.py \
-            -t http://fastapi-app:8000 \
-            -x zap-report.xml \
-            -r zap-report.html \
-            -J zap-report.json \
-            -w zap-warnings.md
+          -v $(pwd)/zap-output:/zap/reports \
+          ghcr.io/zaproxy/zaproxy:stable \
+          /zap/zap-baseline.py \
+          -t http://fastapi-app:8000 \
+          --autooff \
+          -x /zap/reports/zap-report.xml \
+          -r /zap/reports/zap-report.html \
+          -J /zap/reports/zap-report.json \
+          -w /zap/reports/zap-warnings.md
+
 
 
 
