--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,6 +50,7 @@ jobs:
       # 8. Run OWASP ZAP baseline scan
       - run: |
           mkdir zap-output
+          chmod 777 zap-output 
           docker run --rm --network zapnet \
           -v $(pwd)/zap-output:/zap/wrk \
           ghcr.io/zaproxy/zaproxy:stable \
@@ -68,7 +69,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: zap-report
-          path: zap-output/zap-report.html
+          path: zap-output/*
 
 
       # 10. SonarQube scan
