--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,14 +38,22 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Build Docker image
-      - run: docker build -t fastapi-calculator .
+       # Build image
+      - name: Build Docker image
+        run: |
+          docker build -t guhan1943/fastapi-calculator:latest .
+      
+      # Push image
+      - name: Push Docker image
+        run: |
+          docker push guhan1943/fastapi-calculator:latest .
 
       # 7. Run Docker container on shared network
       - run: |
           docker network create zapnet
           docker run -d --network zapnet --name fastapi-app fastapi-calculator
           sleep 20  # wait for app to start
+    
 
       # 8. Run OWASP ZAP baseline scan
       - run: |
